--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,10 @@
 [pytest]
 
 markers =
+    auth: tests for auth.
     personal_data: tests for editing personal data.
     set_user_image: test for setting user image.
+    sign_up: tests for sign up.
     bug: mark test as bug.
 
 log_format = %(asctime)s %(levelname)s %(message)s
