--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-python: 3.8
+python: 3.9
 
 addons:
   chrome: stable
@@ -7,9 +7,10 @@ addons:
 before_install:
   - pip install pre-commit
 
+
 install:
   - pip install -r requirements.txt
 
 script:
   - pre-commit run --all-files
-  - pytest
+  - pytest -s -v --headless=True;
