--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: python
-python: 3.8
+python: 3.9
 
 addons:
   chrome: stable
@@ -12,4 +12,4 @@ install:
 
 script:
   - pre-commit run --all-files
-  - pytest
+  - make pytest
