--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ addons:
 before_install:
   - pip install pre-commit
 
+
 install:
   - pip install -r requirements.txt
 
 script:
   - pre-commit run --all-files
-  - make pytest
+  - pytest -s -v --headless=True;
